0.017 2024-11-22
  [New Features]
    * Add Net::SSLeay::Constant#OPENSSL_VERSION_TEXT method.
  [Incompatible Changes]
    * Move Net::SSLeay::Util::X509#get_ocsp_uri method to Net::SSLeay::X509#P_get_ocsp_uri method.
    * Move Net::SSLeay::Util#dump_peer_certificate method to Net::SSLeay#P_dump_peer_certificate method.
    * Remove the following classes.
        Net::SSLeay::Util
        Net::SSLeay::Util::OCSP
        Net::SSLeay::Util::PKCS12
        Net::SSLeay::Util::X509
  [Document Improvement]
    * Add the links to all classes.
    
0.016 2024-11-21
  [New Features]
    * Add Net::SSLeay::Util class.
    * Add Net::SSLeay::Util::OCSP class.
    * Add Net::SSLeay::Util::X509 class.
    * Add Net::SSLeay::Util::PKCS12 class.
    * Add Net::SSLeay::Util#dump_peer_certificate method.
    * Add Net::SSLeay::Constant#OPENSSL_INIT_LOAD_SSL_STRINGS method.
    * Add Net::SSLeay::Constant#OPENSSL_INIT_NO_LOAD_SSL_STRINGS method.
    * Add the following methods to Net::SSLeay::Constant.
      OPENSSL_INIT_NO_LOAD_SSL_STRINGS
      OPENSSL_INIT_LOAD_SSL_STRINGS
      OPENSSL_INIT_NO_LOAD_CRYPTO_STRINGS
      OPENSSL_INIT_LOAD_CRYPTO_STRINGS
      OPENSSL_INIT_ADD_ALL_CIPHERS
      OPENSSL_INIT_ADD_ALL_DIGESTS
      OPENSSL_INIT_NO_ADD_ALL_CIPHERS
      OPENSSL_INIT_NO_ADD_ALL_DIGESTS
      OPENSSL_INIT_LOAD_CONFIG
      OPENSSL_INIT_NO_LOAD_CONFIG
      OPENSSL_INIT_ASYNC
      OPENSSL_INIT_ENGINE_RDRAND
      OPENSSL_INIT_ENGINE_DYNAMIC
      OPENSSL_INIT_ENGINE_OPENSSL
      OPENSSL_INIT_ENGINE_CRYPTODEV
      OPENSSL_INIT_ENGINE_CAPI
      OPENSSL_INIT_ENGINE_PADLOCK
      OPENSSL_INIT_ENGINE_AFALG
      OPENSSL_INIT_ENGINE_ALL_BUILTIN
      OPENSSL_INIT_ATFORK
      OPENSSL_INIT_NO_ATEXIT
    * Add Net::SSLeay::OPENSSL_INIT_SETTINGS class.
    * Add Net::SSLeay::OPENSSL#init_ssl method.
    * Add Net::SSLeay::PKCS12 class.
    * Add  Net::SSLeay::Util::X509#get_ocsp_uri method.
    * Add  Net::SSLeay::EVP#sha1 method.
  [Incompatible Changes]