@@ -1,6 +1,7 @@
 0.017 2024-11-22
   [New Features]
     * Add Net::SSLeay::Constant#OPENSSL_VERSION_TEXT method.
+    * Add ASN1_ENUMERATED#DESTROY method.
   [Incompatible Changes]
     * Move Net::SSLeay::Util::X509#get_ocsp_uri method to Net::SSLeay::X509#P_get_ocsp_uri method.
     * Move Net::SSLeay::Util#dump_peer_certificate method to Net::SSLeay#P_dump_peer_certificate method.
